# Raptor

./: .clangd  .gitignore  README.md  text.cpp
agent/: agent  agent.cpp  agent.hpp  main.cpp  pips.hpp  utils.cpp  utils.hpp
common/: buffer.hpp  header.hpp  register.hpp  type.hpp  utils.hpp
common/parser/: base.hpp  http.hpp  tcp.hpp
common/parser/handlers/: onCommand.cpp  onCommand.hpp  onDownload.cpp  onDownload.hpp  onRegister.cpp  onRegister.hpp  onUpload.cpp  onUpload.hpp
core/: CMakeLists.txt  config.hpp  context.hpp  main.cpp
core/api/: init.hpp  utils.cpp  utils.hpp
core/api/controllers/: auth.cpp  auth.hpp  servers.cpp  servers.hpp  session.cpp  session.hpp  socket.cpp  socket.hpp
core/api/filters/: AuthFilter.cpp  AuthFilter.hpp
core/db/: db.cpp  db.hpp  error.hpp  logRepository.hpp  s.txt  schema.sql
core/debug/: db
core/scripts/: setup.sh
core/servers/: base.hpp  manager.cpp  manager.hpp
core/servers/tcp/: tcp.cpp  tcp.hpp
core/servers/tcp/handlers/: error.hpp  errror.cpp  incoming.cpp  incoming.hpp  request.cpp  request.hpp  response.cpp  response.hpp  shutdown.cpp  shutdown.hpp  timeout.cpp  timeout.hpp
core/servers/udp/: udp.cpp  udp.hpp
core/servers/udp/handlers/: datagram.cpp  datagram.hpp  error.cpp  error.hpp  timeout.cpp  timeout.hpp
core/session/: base.hpp  manager.cpp  manager.hpp  queue.hpp  tcp.hpp  udp.hpp
core/session/task/: task.hpp
core/web/: package.json  tsconfig.app.json  vite.config.ts
core/web/src/: App.tsx  index.css  main.tsx
core/web/src/components/buttons/: pause-server-button.tsx  resume-server-button.tsx  stop-server.button.tsx
core/web/src/components/forms/: login-form.tsx  new-server-form.tsx  update-server-form.tsx
core/web/src/components/layout/: auth-layout.tsx  protected-layout.tsx
core/web/src/components/session/: Interactive.tsx  status-bar.tsx  tab.tsx
core/web/src/components/shared/: confirm-action.tsx  header.tsx  log-row.tsx  server-card.tsx  server-logs.tsx  side-bar.tsx  trafficGraph.tsx
core/web/src/components/ui/: badge.tsx  card.tsx
core/web/src/features/auth/: api.ts  queries.ts
core/web/src/features/servers/: api.ts  queries.ts
core/web/src/features/session/: api.ts  queries.ts
core/web/src/lib/: api.ts  data.ts  socket.ts  use-event.ts  utils.ts
core/web/src/pages/: agent-page.tsx  create-server-page.tsx  login-page.tsx  server-page.tsx  servers-page.tsx  update-server-page.tsx
core/web/src/providers/: auth-context.tsx  auth-provider.tsx  socket-context.tsx  socket-provider.tsx
core/web/src/types/: logs.ts  server.ts  session.ts
libs/net/: README.md
libs/net/include/: address.hpp  connection.hpp  epoll.hpp  error.hpp  server.hpp  socketOptions.hpp
libs/net/src/: address.cpp  connection.cpp  epoll.cpp  server.cpp
libs/net/test/: test-udp.cpp  test_tcp.cpp
